Domain row header alignment fixes and move expand icon to left - and align the expanded row content accordingly

--- a/packages/components/src/theme/domainproperties.scss
+++ b/packages/components/src/theme/domainproperties.scss
@@ -17,15 +17,6 @@
   cursor: pointer;
 }
 
-.domain-form-hdr-row {
-  margin: 0 0 5px 40px !important;
-  color: $gray;
-};
-
-.domain-form-hdr-margins {
-  padding: 0 0 15px 0;
-};
-
 .domain-form-search {
   margin-bottom: 20px;
 };
@@ -41,10 +32,6 @@
 .domain-search-input {
     width: 300px;
     display: inline-block;
-}
-
-.domain-form-hdr-center {
-  text-align: center;
 }
 
 .domain-form__file-preview__text {
@@ -66,8 +53,11 @@
 }
 
 .domain-row-base-fields {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
+}
+
+.domain-row-base-fields-position {
   top: 50%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
@@ -122,14 +112,22 @@
   margin-left: 0;
 }
 
-.domain-field-checkbox {
-  height: 0;
-  margin-top: 3px !important;
-};
-
 .domain-field-checkbox-container {
-  margin: auto;
-  display: table;
+  margin-left: 0;
+}
+
+.domain-field-checkbox {
+    height: 0;
+    margin-top: 3px !important;
+}
+
+.domain-field-checkbox-label {
+    margin: 0 0 0 8px !important;
+    color: gray;
+}
+
+.domain-field-checkbox-margin {
+    margin-top: 2px;
 }
 
 .domain-field-details {
@@ -140,7 +138,7 @@
   padding-top: 15px;
   white-space: nowrap;
   text-overflow: ellipsis;
-};
+}
 
 .domain-field-details-expanded {
   color: $gray-dark;
@@ -163,20 +161,23 @@
   padding-top: 9px;
 };
 
-.domain-field-details-container {
-  display: flex;
-  top: 60%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  justify-content: space-between;
-  height: 50px;
+.domain-row-details-container {
+    display: flex;
 };
 
-.domain-field-expand-icon {
+.domain-row-expand {
+    display: table-cell;
+    vertical-align: top;
+    padding-top: 10px;
+    width: 55px;
+}
+
+.domain-field-expand-icon, .domain-form-expand-btn {
     color: $gray-no-highlight;
 
     &:hover {
         color: $blue-highlight;
+        cursor: pointer;
     }
 }
 
@@ -185,6 +186,7 @@
 
     &:hover {
         color: $brand-danger;
+        cursor: pointer;
     }
 }
 
@@ -210,15 +212,6 @@
 
 .domain-form-manual-section {
     text-align: center;
-}
-
-.domain-form-expand-btn {
-  color: $gray-no-highlight;
-
-  &:hover {
-    color: $blue-highlight;
-    cursor: pointer;
-  }
 }
 
 .domain-form-collapse-btn {
@@ -310,11 +303,6 @@
   color: gray;
 }
 
-.domain-field-checkbox-label {
-  margin: 0 0 0 8px !important;
-  color: gray;
-}
-
 .domain-field-float-left {
   float: left;
 }
@@ -346,10 +334,6 @@
   color: red;
   margin-top: 3%;
   margin-right: 20px;
-}
-
-.domain-field-checkbox-margin {
-  margin-top: 2px;
 }
 
 .domain-adv-footer {
@@ -397,9 +381,16 @@
 }
 
 .domain-floating-hdr {
-  padding-top: 28px;
-  background-color: white;
-  height: 60px;
+    background-color: $white;
+    border-top-color: $white;
+    border-left-color: $white;
+    border-right-color: $white;
+    padding-bottom: 15px;
+    color: $gray;
+}
+
+.domain-form-hdr-margins {
+    padding: 0 0 15px 0;
 }
 
 .domain-row-handle {
@@ -432,6 +423,11 @@
 .domain-row-container-expanded {
   display: table-cell;
   padding: 15px 2px 30px 0;
+}
+
+.domain-row-container-expand-spacer {
+    width: 20px;
+    display: table-cell;
 }
 
 .domain-row-main {
