--- a/packages/components/src/theme/fields.scss
+++ b/packages/components/src/theme/fields.scss
@@ -26,11 +26,6 @@
   padding: 0
 }
 
-.field-details-container {
-  display: flex;
-  padding-left: 10px;
-};
-
 .field-text-nowrap {
     white-space: nowrap;
     display: inline-block;
